--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "LeetNet - Your LeetCode Social Hub",
+  "name": "Code or Die",
   "description": "An extension to view the activity of your friends on LeetCode.",
   "version": "1.1",
   "manifest_version": 3,
