--- a/manifest.json
+++ b/manifest.json
@@ -3,14 +3,18 @@
   "description": "An extension to view the activity of your friends on LeetCode.",
   "version": "1.1",
   "manifest_version": 3,
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "codeordie@leetcode.extension",
+      "strict_min_version": "109.0"
+    }
+  },
   "action": {
     "default_popup": "popup/popup.html",
     "default_icon": "icon128.png"
   },
   "permissions": ["storage"],
-  "host_permissions": [
-    "https://leetcode.com/*"
-  ],
+  "host_permissions": ["https://leetcode.com/*"],
   "icons": {
     "16": "icon16.png",
     "19": "icon19.png",
@@ -19,5 +23,5 @@
     "48": "icon48.png",
     "128": "icon128.png"
   }
-  
 }
+
